k8s/ai-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  selector:
    app: ai-server
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    name: ai-http
