k8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
