k8s/notification-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
