k8s/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  labels:
    app: router
spec:
  selector:
    app: router
  ports:
  - port: 80
    name: http
    targetPort: 3000
