k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/sandbox
        pathType: Prefix

        backend:
          service:
            name: sandbox-service
            port:
              number: 80
  - host: "*.preview.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80
